--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
          <div id="mec_tab" style="display:none">
             <p>Machine Learning</p>
             <p>Weekly Review</p>
+            <h1 style="color:DF2700;">QUIZ 1!!!</h1>
             <button onclick="mec_oic()">Ongoing in class</button>
             <button onclick="mec_ss()">Self study</button>
             <button onclick="mec_res()">Resources</button>
@@ -199,7 +200,7 @@
             <h5 style="color:white">Weekly Quiz</h5>
                <ul style="text-align:left; color:white;">
                   <li>Quiz0: (9/9)</li>
-                  <li>Quiz1: </li>
+                  <li>Quiz1: (Already posted: Dead line(Friday.))</li>
                   <li>Quiz2: </li>
                   <li>Quiz3: </li>
                   <li>Quiz4: </li>
@@ -216,21 +217,28 @@
          </div>
          <div id="dic_tab" style="display:none">
             <p>Data Intensive Computing</p>
-            <p>Weekly Review</p>
+            <h1 style="color:DF2700">Project 1</h1>
             <a href="https://cse.buffalo.edu/~bina/cse487/spring2019/index.html">Course link(DIC)</a>
-            <div id="dicss">
-               <ul>
-                  <p>Week1:</p>
-                  <li>Professor suggested book:Fourth Paradigm(Done with someguys lecture. Has to start chapter 1.)</li>
-                  <li>Amazon AWS credentials obtained</li>
-               </ul>
-            </div>
+
             <button onclick="dic_oic()">Ongoing in class</button>
             <button onclick="dic_ss()">Self study</button>
             <button onclick="dic_ass()">Assignments</button>
             <button onclick="dic_pro()">Projects</button>
             <button onclick="dic_mid()">Mid Sem Exam</button>
             <button onclick="dic_final()">Final Exam</button>
+            <div id="dic_ss"style="display:none;">
+               <ul>
+                  <p>Week1:</p>
+                  <li>Professor suggested book:Fourth Paradigm(Done with someguys lecture. Has to start chapter 1.)</li>
+                  <li>Amazon AWS credentials obtained</li>
+               </ul>
+            </div>
+            <div id="dic_pro"style="display:none; color:white">
+               <ul>
+                  <p>Project 1:</p>
+                  <li>Update the progress and set goals.</li>
+               </ul>
+            </div>
          </div>
          <div id="sdm_tab" style="display:none">
             <h2 style="color:white;">Statistical Data Mining</h2>
@@ -275,6 +283,12 @@
                <ul>
                   <li>Chapter1: Data Models.</li>
                   <li>Oracle Database Managment System usage</li>
+               </ul>
+               <h3>Week:3</h3>
+               <ul>
+                  <li>Chapter3: ER, EER.</li>
+                  <li>Weak entity type</li>
+                  <li>Ask Akhil for notes</li>
                </ul>
             </div>
          </div>
