--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <p>Data Intensive Computing</p>
             <h1 style="color:DF2700">Project 1</h1>
             <a href="https://cse.buffalo.edu/~bina/cse487/spring2019/index.html">Course link(DIC)</a>
-
+            <br/>
             <button onclick="dic_oic()">Ongoing in class</button>
             <button onclick="dic_ss()">Self study</button>
             <button onclick="dic_ass()">Assignments</button>
@@ -264,6 +264,10 @@
                   <li>T tests, AIC, BIC, Bagging, Boosting, Bootstrapping.</li>
                   <li>Netflix datascience positions.</li>
                </ul>
+            </div>
+            <div id="sdm_ass" style="display:none;">
+               <p>Assignment 1 : (Deadline 2/27)</p>
+               <p>Max points : 40</p>
             </div>
          </div>
          <div id="dmq_tab" style="display:none">
