--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
             <a href="#">Personal</a>
          </div>
-         <div id="acad_deadlines">
+         <div id="acad_deadlines" style="display:none; color:white;">
             <p style="color:white;">Academic Deadlines</p>
             <p>This includes deadlines of homework, assignments and exams</p>
             <ul>
@@ -164,7 +164,7 @@
          <div id="mec_tab" style="display:none">
             <p>Machine Learning</p>
             <p>Weekly Review</p>
-            <h1 style="color:DF2700;">QUIZ 1!!!</h1>
+            <!--<h1 style="color:DF2700;">QUIZ 1!!!</h1>-->
             <button onclick="mec_oic()">Ongoing in class</button>
             <button onclick="mec_ss()">Self study</button>
             <button onclick="mec_res()">Resources</button>
@@ -200,7 +200,7 @@
             <h5 style="color:white">Weekly Quiz</h5>
                <ul style="text-align:left; color:white;">
                   <li>Quiz0: (9/9)</li>
-                  <li>Quiz1: (Already posted: Dead line(Friday.))</li>
+                  <li>Quiz1: (9/9) Three attempts.(Naive Bayes Algorithm Vs Bayesian)</li>
                   <li>Quiz2: </li>
                   <li>Quiz3: </li>
                   <li>Quiz4: </li>
@@ -343,9 +343,17 @@
          </div>
       </div>
       <div id="goals" class="tabcontent box">
+         <div class="sidenav">
+            <a href="#" onclick="goal_phd()">PhD Thesis</a>
+            <a href="#" onclick="person_goal()">Personal</a>
+         </div>
          <h3>Defining characteristics of an organism is STRIVING.</h3>
          <p>This includes goals both active and inactive.</p>
          <p>This includes goals both academic and personal.</p>
+         <div id="goal_phd" style="display:none;">
+            <h6>Berkley University</h6>
+            <a href="https://bids.berkeley.edu/people/karthik-ram">Profile</a>
+         </div>
       </div>
       <div id="justlit" class="tabcontent box">
          <h3>Literature and literature only.</h3>
