--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
          </div>
          <div id="acad_home">
             <p>Academics</p>
+            <p>Statistical Data Mining, writeup part</p>
+            <p>Machine Learning weekkly stuff</p>
+            <p>Data Intensive Computing(Review Part 1 and complete part2)</p>
+            <p>Akhil Data Models and query languages material</p>
          </div>
          <div id="mec_tab" style="display:none">
             <p>Machine Learning</p>
@@ -310,6 +314,7 @@
          <div id="homess">
             <h3>Self study</h3>
             <p>This includes personal study material regarding both academic and entertainment.</p>
+            <h6 style="color:white;">Multivariate thing</h6>
          </div>
          <div id="unitopic" style="display:none">
             <h3 style="color:white">Unique Topics</h3>
@@ -350,6 +355,7 @@
          <h3>Defining characteristics of an organism is STRIVING.</h3>
          <p>This includes goals both active and inactive.</p>
          <p>This includes goals both academic and personal.</p>
+         <h6>PhD professor search</h6>
          <div id="goal_phd" style="display:none;">
             <h6>Berkley University</h6>
             <a href="https://bids.berkeley.edu/people/karthik-ram">Profile</a>
