--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
             <h3 style="color:white;">Resources available</h3>
             <a href="https://github.com/owainlewis/awesome-artificial-intelligence" style="color:white;">Awesome Artifcial Intelligence in Github</a>
             <a href="https://see.stanford.edu/Course/CS229/50" style="color:white;">Stanford Machine Learning(Same structure as IML)</a>
+            <a href="http://stat.columbia.edu/~porbanz/npb-tutorial.html#sec:videos" style="color:white;">Bayesian Non-parametric models.</a>
          </div>
          <div id="corbooksid" style="display:none">
             <h3>Good books for academics and learning</h3>
