--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
             <a href="https://github.com/owainlewis/awesome-artificial-intelligence" style="color:white;">Awesome Artifcial Intelligence in Github</a>
             <a href="https://see.stanford.edu/Course/CS229/50" style="color:white;">Stanford Machine Learning(Same structure as IML)</a>
             <a href="http://stat.columbia.edu/~porbanz/npb-tutorial.html#sec:videos" style="color:white;">Bayesian Non-parametric models.</a>
+            <a href="https://www.stats.ox.ac.uk/~teh/npbayes.html" style="color:white;">Yee Whye Teh Bayesian Non-param</a>
          </div>
          <div id="corbooksid" style="display:none">
             <h3>Good books for academics and learning</h3>
