--- a/index.html
+++ b/index.html
@@ -339,8 +339,14 @@
             <h3 style="color:white;">Resources available</h3>
             <a href="https://github.com/owainlewis/awesome-artificial-intelligence" style="color:white;">Awesome Artifcial Intelligence in Github</a>
             <a href="https://see.stanford.edu/Course/CS229/50" style="color:white;">Stanford Machine Learning(Same structure as IML)</a>
+            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-034-artificial-intelligence-fall-2010/lecture-videos/" style="color:white;">Artificial Intelligence(MIT)</a>
             <a href="http://stat.columbia.edu/~porbanz/npb-tutorial.html#sec:videos" style="color:white;">Bayesian Non-parametric models.</a>
             <a href="https://www.stats.ox.ac.uk/~teh/npbayes.html" style="color:white;">Yee Whye Teh Bayesian Non-param</a>
+            <a href="https://www.sciencedirect.com/topics/mathematics/nonparametric-model" style="color:white;">Nonparametric models</a>
+            <a href="https://machinelearningmastery.com/parametric-and-nonparametric-machine-learning-algorithms/" style="color:white;">Param VS Non-param</a>
+            <a href="https://cs.stanford.edu/people/eroberts/courses/soco/projects/neural-networks/History/index.html" style="color:white;">Interactive Neural Networks Lecture</a>
+            <a href="http://deeplearning.net/reading-list/" style="color:white;">Deep learning</a>
+            <a href="https://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=spiral&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2&seed=0.54123&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false" style="color:white;">Tensor flow NN</a>
          </div>
          <div id="corbooksid" style="display:none">
             <h3>Good books for academics and learning</h3>
