--- a/index.html
+++ b/index.html
@@ -326,6 +326,9 @@
                   <li>Machine learning for Python.</li>
                   <li>Scikit learn library in Python</li>
                </ul>
+               <div>
+                  <a href="http://neuralnetworksanddeeplearning.com/chap1.html">Neural networks to identify handwritten digits</a>
+               </div>
             </div>
 
             <div id="ss_dm" style="display:none;">
