--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
          </div>
          <br/>
          <br/>
-         <div id="bio_hack" style="display:none;">
+         <div id="bio_hack" style="display:block;">
             <h6>Bio hacking</h6>
             <a href="https://whatsgood.vitaminshoppe.com/biohacking/">Bio Hacking</a>
             <a href="https://medium.com/biohackers-collective/brain-biohacking-notes-from-the-helsinki-biohackers-summit-4-of-8-c35e4260a699">Biohack summit</a>
