--- a/index.html
+++ b/index.html
@@ -461,6 +461,8 @@
          <br/>
          <br />
          <br />
+         <p>This weeks song :</p>
+         <a href="https://youtu.be/tLqfkSTtEAI?list=RDQEdPe1SxitI"></a>
       </div>
    </body>
    <script type="text/javascript" src="index.js"></script>
