--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
          <br />
          <br />
          <p>This weeks song :</p>
-         <a href="https://youtu.be/tLqfkSTtEAI?list=RDQEdPe1SxitI"></a>
+         <a href="https://youtu.be/tLqfkSTtEAI?list=RDQEdPe1SxitI" style="color:white;">Apocalypse</a>
       </div>
    </body>
    <script type="text/javascript" src="index.js"></script>
