--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
             <a href="#" onclick="corbooks()">Course Books</a>
             <a href="#" onclick="uni_topic()">Unique Topics</a>
             <a href="#" onclick="art_pap()">Papers and articles</a>
+            <a href="#" onclick="inter_prep()">Interview Preparation</a>
          </div>
          <div id="homess">
             <h3>Self study</h3>
@@ -405,6 +406,14 @@
                <li>MIT challenge book for Machine learning.</li>
             </ul>
          </div>
+         <div id="interprep" style="display:none; align=left; color:white;">
+            <h3>Part 1:</h3>
+            <h3>Machine Learning Algorithms<a href="https://github.com/ShuaiW/ml-interview">Github Link</a></h3>
+            <h3>Part 2:</h3>
+            <h3>Python and SQL language prep (Python Book)</h3>
+            <h3>Part 3:</h3>
+            <h3>Real life problems prep</h3>
+         </div>
       </div>
       <div id="goals" class="tabcontent box">
          <div class="sidenav">
@@ -443,6 +452,7 @@
             <li>Mobile No: (757)-693-1846</li>
             <li>Mail ID: akhiladevi95@gmail.com</li>
             <li>Facebook ID: Akhila Devabhaktuni</li>
+            <li>Twitter : akhila941</li>
          </ul>
          <a href="https://www.facebook.com/akhiladevi.devabhaktuni" class="fa fa-facebook">
          </a>
