--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          margin: 20px;
          }
          .box {
-         background-color: rgba(0,0,0,0.5 );
+         background-color: rgba(192,192,192,0.3 );
          padding: 100px;
          width: 600px;
          margin: 30px auto	;
@@ -472,7 +472,7 @@
          <br />
          <br />
          <p>This weeks song :</p>
-         <a href="https://youtu.be/tLqfkSTtEAI?list=RDQEdPe1SxitI" style="color:white;">Apocalypse</a>
+         <a href="https://www.youtube.com/watch?v=aXjdMV7SOfE&list=RDQEdPe1SxitI&index=2" style="color:white;">Unforgettable - Nat King Cole</a>
       </div>
    </body>
    <script type="text/javascript" src="index.js"></script>
