--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head>
       <style>
          body {
-         background: url('Back2.jpg') no-repeat center center fixed;
+         background: url('BK_ES.png') no-repeat center center fixed;
          -webkit-background-size: cover;
          -moz-background-size: cover;
          -o-background-size: cover;
