--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          background-size: cover;;
          }
          h1 {
-         color: white;
+         color: black;
          font-family: 'Helvetica Neue',Helvetica;
          font-weight: 800;
          font-size: 60px;
@@ -143,17 +143,11 @@
 
       <div id="selfStudy" class="tabcontent box" style="float: right;display: block;width: 460px;">
          <div class="sidenav">
-            <a href="#" onclick="home_ss()">Home</a>
             <a href="#" onclick="courses()">Courses</a>
             <a href="#" onclick="corbooks()">Course Books</a>
             <a href="#" onclick="uni_topic()">Unique Topics</a>
             <a href="#" onclick="art_pap()">Papers and articles</a>
             <a href="#" onclick="inter_prep()">Interview Preparation</a>
-         </div>
-         <div id="homess">
-            <h3>Self study</h3>
-            <p>This includes personal study material regarding both academic and entertainment.</p>
-            <h6 style="color:white;">Multivariate thing</h6>
          </div>
          <div id="artpap" style="display:none; align=left; color:white;">
             <h3>Interesting Articles</h3>
@@ -296,7 +290,7 @@
          </a>
       </div>
       <div class="box" id="mainInfo">
-         <h1>Be afraid, but don't let it control you.</h1>
+         <h1 style="font-family:fantasy; font-size:40px;">" Summom Bonum - To the highest good "</h1>
          <p>
             <i></i>
          </p>
@@ -310,7 +304,7 @@
          <br />
          <br />
          <p>This weeks song :</p>
-         <a href="https://www.youtube.com/watch?v=aXjdMV7SOfE&list=RDQEdPe1SxitI&index=2" style="color:white;">Unforgettable - Nat King Cole</a>
+         <a href="https://www.youtube.com/watch?v=aXjdMV7SOfE&list=RDQEdPe1SxitI&index=2" style="color:black;">Unforgettable - Nat King Cole</a>
       </div>
    </body>
    <script type="text/javascript" src="index.js"></script>
