--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          display: none;
          padding: 6px 12px;
          border: 1px solid #ccc;
-         border-top: none;
+         border-top: 1px solid #ccc;
          }
          ul {
          list-style-type: none;
@@ -132,7 +132,7 @@
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
          </div>
          <div id="selfChal" style="display:block">
-            <ul style="color:white; text-align:left;">
+            <ul style="color:black; text-align:left;">
                <li>Machine Learning book in MIT challenge</li>
                <li>Python for machine learning</li>
                <li>R for Data Science book</li>
@@ -252,10 +252,6 @@
             <a href="#" onclick="goal_phd()">PhD Thesis</a>
             <a href="#" onclick="person_goal()">Personal</a>
          </div>
-         <h3>Defining characteristics of an organism is STRIVING.</h3>
-         <p>This includes goals both active and inactive.</p>
-         <p>This includes goals both academic and personal.</p>
-         <h6>PhD professor search</h6>
          <div id="goal_phd" style="display:none;">
             <h6>Berkley University</h6>
             <a href="https://bids.berkeley.edu/people/karthik-ram">Profile</a>
@@ -281,10 +277,7 @@
          <h3>Personal contact information</h3>
          <p>This just has my personal conatct information.</p>
          <ul>
-            <li>Mobile No: (757)-693-1846</li>
             <li>Mail ID: akhiladevi95@gmail.com</li>
-            <li>Facebook ID: Akhila Devabhaktuni</li>
-            <li>Twitter : akhila941</li>
          </ul>
          <a href="https://www.facebook.com/akhiladevi.devabhaktuni" class="fa fa-facebook">
          </a>
