--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
    </head>
    <body>
       <div class="tab">
-         <button class="tablinks" onclick="personalInfo()">AKHILA DEVABHAKTUNI</button>
-         <button class="tablinks" onclick="eventdirect(event,'Deadlines')">Dead Lines</button>
-         <button class="tablinks" onclick="eventdirect(event, 'selfStudy')">Self Study</button>
-         <button class="tablinks" onclick="eventdirect(event, 'goals')">Goals</button>
-         <button class="tablinks" onclick="eventdirect(event, 'contactInfo')">Contact Information</button>
+         <button class="tablinks" onclick="personalInfo()" style="font-family:Courier; font-size:30px">AKHILA DEVABHAKTUNI</button>
+         <button class="tablinks" onclick="eventdirect(event,'Deadlines')" style="font-family:Palatino; font-size:20; margin-top:6px">Dead Lines</button>
+         <button class="tablinks" onclick="eventdirect(event, 'selfStudy')" style="font-family:Palatino; font-size:20; margin-top:6px">Self Study</button>
+         <button class="tablinks" onclick="eventdirect(event, 'goals')" style="font-family:Palatino; font-size:20; margin-top:6px">Goals</button>
+         <button class="tablinks" onclick="eventdirect(event, 'contactInfo')" style="font-family:Palatino; font-size:20; margin-top:6px">Contact Information</button>
       </div>
 
       <!--Deadlines Section on Overhead bar-->
@@ -141,7 +141,7 @@
          </div>
       </div>
 
-      <div id="selfStudy" class="tabcontent box" style="float: right;display: block;width: 460px;">
+      <div id="selfStudy" class="tabcontent box" style="width: 460px;">
          <div class="sidenav">
             <a href="#" onclick="courses()">Courses</a>
             <a href="#" onclick="corbooks()">Course Books</a>
@@ -275,7 +275,6 @@
       </div>
       <div id="contactInfo" class="tabcontent box">
          <h3>Personal contact information</h3>
-         <p>This just has my personal conatct information.</p>
          <ul>
             <li>Mail ID: akhiladevi95@gmail.com</li>
          </ul>
