--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
          .tab {
          overflow: hidden;
          border: 1px solid #ccc;
-         background-color: #f1f1f1;
+         background-color: #a5f0ec;
          }
          /* Style the buttons that are used to open the tab content */
          .tab button {
