--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
    </head>
    <body>
       <div class="tab">
-         <button class="tablinks" onclick="personalInfo()" style="font-family:Courier; font-size:30px">AKHILA DEVABHAKTUNI</button>
+         <button class="tablinks" onclick="personalInfo()" style="font-family:Courier; font-size:30px">AKHILA_DEVABHAKTUNI</button>
          <button class="tablinks" onclick="eventdirect(event,'Deadlines')" style="font-family:Palatino; font-size:20; margin-top:6px">Dead Lines</button>
          <button class="tablinks" onclick="eventdirect(event, 'selfStudy')" style="font-family:Palatino; font-size:20; margin-top:6px">Self Study</button>
          <button class="tablinks" onclick="eventdirect(event, 'goals')" style="font-family:Palatino; font-size:20; margin-top:6px">Goals</button>
