--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       </div>
       <div id="goals" class="tabcontent box">
          <div class="sidenav">
-            <a href="#" onclick="goal_phd()">PhD Thesis</a>
+            <a href="#" onclick="goal_phd()">PhD-University of Georgia</a>
             <a href="#" onclick="person_goal()">Personal</a>
          </div>
          <div id="goal_phd" style="display:none;">
