--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
          }
          /* The sidebar menu */
          .sidenav {
-         height: 100%; /* Full-height: remove this if you want "auto" height */
+         height: 80%; /* Full-height: remove this if you want "auto" height */
          width: 200px; /* Set the width of the sidebar */
          position: fixed; /* Fixed Sidebar (stay in place on scroll) */
          z-index: 1; /* Stay on top */
-         top: 50; /* Stay at the top */
-         left: 0;
-         background-color: #111; /* Black */
+         top: 100; /* Stay at the top */
+         left: 10;
+         background-color: #6fd6a3; /* Black */
          overflow-x: hidden; /* Disable horizontal scroll */
          padding-top: 20px;
          }
@@ -97,7 +97,7 @@
          padding: 6px 8px 6px 16px;
          text-decoration: none;
          font-size: 25px;
-         color: #818181;
+         color: black;
          display: block;
          }
          /* When you mouse over the navigation links, change their color */
@@ -253,8 +253,8 @@
             <a href="#" onclick="person_goal()">Personal</a>
          </div>
          <div id="goal_phd" style="display:none;">
-            <h6>Berkley University</h6>
-            <a href="https://bids.berkeley.edu/people/karthik-ram">Profile</a>
+            <h6>University of Georgia</h6>
+            <h6>To Do List:</h6>
          </div>
          <br/>
          <br/>
