--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
          }
          /* Change background color of buttons on hover */
          .tab button:hover {
-         background-color: #ddd;
+         background-color: #16948d;
          }
          /* Create an active/current tablink class */
          .tab button.active {
-         background-color: #ccc;
+         text-decoration: underline;
          }
          /* Style the tab content */
          .tabcontent {
@@ -119,7 +119,7 @@
    </head>
    <body>
       <div class="tab">
-         <button class="tablinks" onclick="personalInfo()" style="font-family:Courier; font-size:30px">AKHILA_DEVABHAKTUNI</button>
+         <button class="tablinks" onclick="eventdirect(event, 'mainInfo')" style="font-family:Courier; font-size:30px">AKHILA_DEVABHAKTUNI</button>
          <button class="tablinks" onclick="eventdirect(event,'Deadlines')" style="font-family:Palatino; font-size:20; margin-top:6px">Dead Lines</button>
          <button class="tablinks" onclick="eventdirect(event, 'selfStudy')" style="font-family:Palatino; font-size:20; margin-top:6px">Self Study</button>
          <button class="tablinks" onclick="eventdirect(event, 'goals')" style="font-family:Palatino; font-size:20; margin-top:6px">Goals</button>
