--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
          padding: 6px 12px;
          border: 1px solid #ccc;
          border-top: 1px solid #ccc;
+         width : 460px
          }
          ul {
          list-style-type: none;
@@ -120,8 +121,9 @@
    <body>
       <div class="tab">
          <button class="tablinks" onclick="eventdirect(event, 'mainInfo')" style="font-family:Courier; font-size:30px">AKHILA_DEVABHAKTUNI</button>
-         <button class="tablinks" onclick="eventdirect(event,'Deadlines')" style="font-family:Palatino; font-size:20; margin-top:6px">check_point</button>
-         <button class="tablinks" onclick="eventdirect(event, 'selfStudy')" style="font-family:Palatino; font-size:20; margin-top:6px">personal_space</button>
+         <button class="tablinks" onclick="eventdirect(event,'Deadlines')" style="font-family:Palatino; font-size:20; margin-top:6px">Check Point</button>
+         <button class="tablinks" onclick="eventdirect(event, 'headArea')" style="font-family:Palatino; font-size:20; margin-top:6px">Head area</button>
+         <button class="tablinks" onclick="eventdirect(event, 'personalSpace')" style="font-family:Palatino; font-size:20; margin-top:6px">Personal Space</button>
          <button class="tablinks" onclick="eventdirect(event, 'goals')" style="font-family:Palatino; font-size:20; margin-top:6px">Goals</button>
          <button class="tablinks" onclick="eventdirect(event, 'contactInfo')" style="font-family:Palatino; font-size:20; margin-top:6px">Contact Information</button>
          <canvas id="display" width="120" height="34" style="margin-top:12px; margin-right:30px; float:right;"></canvas>
@@ -156,13 +158,14 @@
          </div>
       </div>
 
-      <div id="selfStudy" class="tabcontent box" style="width: 460px;">
+      <div id="headArea" class="tabcontent box">
          <div class="sidenav">
             <a href="#" onclick="courses()">external_resources</a>
             <a href="#" onclick="corbooks()">acad_books</a>
             <a href="#" onclick="uni_topic()">Unique Topics</a>
             <a href="#" onclick="rsrch_pap()">research_papers</a>
             <a href="#" onclick="art_pap()">interesting_articles</a>
+            <a href="#" onclick="math_concpt()">Math concepts</a>
             <a href="#" onclick="inter_prep()">Interview Preparation</a>
          </div>
          <div id="artpap" style="display:none; align=left; color:black;">
@@ -254,6 +257,15 @@
                <li>MIT challenge book for Machine learning.</li>
             </ul>
          </div>
+         <!--Math concepts-->
+         <div id="mathcncpt" style="display:none;">
+            <h3>Interesting concepts : Math or otherwise</h3>
+            <ul>
+               <li>Turing Machine</li>
+               <li>Conway's game of life</li>
+               <li>Simulation games</li>
+            </ul>
+         </div>
          <div id="interprep" style="display:none; align=left; color:black;">
             <h3>Part 1:</h3>
             <h3>Machine Learning Algorithms<a href="https://github.com/ShuaiW/ml-interview">Github Link</a></h3>
@@ -261,6 +273,16 @@
             <h3>Python and SQL language prep (Python Book)</h3>
          </div>
       </div>
+
+      <div id="personalSpace" class="tabcontent box">
+         <div class="sidenav">
+            <a href="#" onclick="books()">Books</a>
+            <a href="#" onclick="websites()">Websites</a>
+            <a href="#" onclick="math_puzz()">Math puzzles</a>
+            <a href="#" onclick="websites()">People</a>
+         </div>
+      </div>
+
       <div id="goals" class="tabcontent box">
          <div class="sidenav">
             <a href="#" onclick="goal_phd()">PhD-University of Georgia</a>
