--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
             Marcus Aurelius
          </p>
          <br/>
+         <p><b>Book in my hand : A walk in the woods by Bill Bryson </b></p>
+         <p>I'd never dare attempt to walk the Appalachian Trail myself, so, might as well read about it.</p>
          <br />
          <p>This weeks song :</p>
          <a href="https://www.youtube.com/watch?v=aXjdMV7SOfE&list=RDQEdPe1SxitI&index=2" style="color:black;">Unforgettable - Nat King Cole</a>
@@ -280,6 +282,26 @@
             <a href="#" onclick="websites()">Websites</a>
             <a href="#" onclick="math_puzz()">Math puzzles</a>
             <a href="#" onclick="websites()">People</a>
+         </div>
+
+         <div id='prsnl_space'>
+            <p>I have no idea why I'm putting this off.</p>
+            <a href="https://ai.facebook.com/blog/-powered-by-ai-turning-any-2d-photo-into-3d-using-convolutional-neural-nets/">
+               Converting any 2D picture into 3D picture (15 min)
+            </a>
+            <br/>
+            <a href="https://www.youtube.com/watch?v=HUzqhI-BKag&feature=youtu.be&fbclid=IwAR2OLQWBeSuOkKZxtKIcgssG87RjIHZZ6aE4RWc5FKrXlWnsoPte8bweSRY">
+               Yann LeCun speech at Cosyne 2019 - Feedforward networks, deep and shallow. (1hr 18min)
+            </a>
+         </div>
+
+         <div id='wbsts' style='display:none;'>
+            <p>List of all the interesting websites I refer to regularly.</p>
+            <ul>
+               <li><a href='https://medium.com/'>Medium</a></li>
+               <li><a href='https://deepmind.com/'>DeepMind</a></li>
+            </ul>
+
          </div>
       </div>
 
