--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 
          <div id="unitopic" style="display:none">
             <h4>Topic in hand : Support Vector Machines(Types of Kernels : RBF)</h4>
+            <h4>Next in hand : Naive Bayes</h4>
             <h3 style="color:black">Unique Topics</h3>
             <button onclick="ss_dm()">Data Mining topics</button>
             <button onclick="ss_ml()">Machine Learning topics</button>
